--- a/dor/dor/dor.csproj
+++ b/dor/dor/dor.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Template.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>Template.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Template.cs">
+      <DependentUpon>Template.cshtml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
